--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -8,7 +8,16 @@
 	"description": "{{appDescription}}",
 	"applicationVersion": {
 	  "version": "1.0.0"
-	}
+    },
+    "dataSources": {
+        "studentData": {
+            "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
+            "type": "OData",
+            "settings": {
+                "odataVersion": "2.0"
+            }
+        }
+    }
   },
   "sap.ui": {
 	"technology": "UI5",
@@ -38,7 +47,10 @@
 		  "supportedLocales": [""],
 		  "fallbackLocale": ""
 		}
-	  }
+      },
+      "student": {
+          "dataSource": "studentData"
+      }
     },
     "resources": {
         "css": [
